--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "justifier",
   "displayName": "justifier",
   "description": "Justify multiline comments",
+  "icon": "icon.png",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.81.0"
