--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "preview":         true,
     "version":         "0.0.1",
     "repository": {
-      "url": "https://github.com/pouyakary/vscode-comment-justifier.git",
-      "type": "git"
+        "type":    "git",
+        "url":     "https://github.com/pouyakary/vscode-comment-justifier.git"
     },
     "author": {
         "email":       "kary@gnu.org",
@@ -20,6 +20,9 @@
     },
     "categories": [
         "Other"
+    ],
+    "activationEvents": [
+
     ],
     "contributes": {
         "commands": [
@@ -49,7 +52,6 @@
         "package-web":             "webpack --mode production --devtool hidden-source-map",
         "pretest":                 "npm run compile-web",
         "run-in-browser":          "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. .",
-        "test":                    "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. --extensionTestsPath=dist/web/test/suite/index.js",
         "vscode:prepublish":       "npm run package-web",
         "watch-web":               "webpack --watch"
     },
